derive/tests/snapshots/wrapper_methods/AccountNote/get_all_account_notes.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `account_note` table.
    pub fn get_all_account_notes<'a>(&'a self) -> impl Iterator<Item = AccountNote> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().account_note().iter()
    }
}
