derive/tests/snapshots/wrapper_methods/AccountNote/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_account_note_table_has_no_foreign_key_attribute_referencing_the_account_table {}
const _: () = {
    use crate::accounts::this_compilation_error_occurs_because_the_account_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_account_note_table;
    use crate::accounts::this_compilation_error_occurs_because_your_foreign_key_referencing_the_account_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_account_table_has_no_referenced_by_attribute_referencing_the_account_note_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct AccountNoteId {
    value: u64,
}
impl Default for AccountNoteId {
    fn default() -> AccountNoteId {
        AccountNoteId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for AccountNoteId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "AccountNoteId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for AccountNoteId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&AccountNote> for AccountNoteId {
    fn from(value: &AccountNote) -> Self {
        AccountNoteId {
            value: value.id.clone(),
        }
    }
}
impl From<&AccountNote> for Option<AccountNoteId> {
    fn from(value: &AccountNote) -> Option<AccountNoteId> {
        Some(AccountNoteId {
            value: value.id.clone(),
        })
    }
}
impl From<&AccountNoteId> for Option<AccountNoteId> {
    fn from(value: &AccountNoteId) -> Option<AccountNoteId> {
        use crate::spacetimedsl::Wrapper;
        Some(AccountNoteId::new(value.value()))
    }
}
impl From<&AccountNoteId> for AccountNoteId {
    fn from(value: &AccountNoteId) -> Self {
        use crate::spacetimedsl::Wrapper;
        AccountNoteId::new(value.value())
    }
}
impl AccountNote {
    ///
    pub fn get_id(&self) -> AccountNoteId {
        use crate::spacetimedsl::Wrapper;
        AccountNoteId::new(self.id.clone())
    }
    /**References the `id` column of the `account` table (`crate::accounts`).

- On delete: `Error`
- On soft delete: none, the `account` table is not soft-deletable*/
    pub fn get_account_id(&self) -> crate::accounts::AccountId {
        use crate::spacetimedsl::Wrapper;
        crate::accounts::AccountId::new(self.account_id.clone())
    }
    /**References the `id` column of the `account` table (`crate::accounts`).

- On delete: `Error`
- On soft delete: none, the `account` table is not soft-deletable*/
    pub fn set_account_id(
        &mut self,
        account_id: impl Into<crate::accounts::AccountId>,
    ) -> crate::accounts::AccountId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.account_id,
            account_id.into().value(),
        );
        crate::accounts::AccountId::new(old_value)
    }
}
///
pub struct CreateAccountNote {
    pub account_id: crate::accounts::AccountId,
}

// Generated DSL methods:
// count_of_all_account_notes
// create_account_note
// delete_account_note_by_id
// delete_account_notes_by_account_id
// execute_on_delete_strategies_of_the_account_note_table_after_multiple_rows_of_the_account_table_were_deleted
// execute_on_delete_strategies_of_the_account_note_table_after_one_row_of_the_account_table_was_deleted
// get_account_note_by_id
// get_account_notes_by_account_id
// get_all_account_notes
// update_account_note_by_id
